[package]
name = "wasi-tcp-server"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "wasi tcp server"

[[bin]]
name = "wasi-tcp-server"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_wasi_socket = "0.4"
